IWS_1st/IWS/API/Litecad.h

BOOL   LCAPI lcPaint_PtbufAddArc3p   (HANDLE hPtbuf, double X1, double Y1, double X2, double Y2, double X3, double Y3, int Resol);
BOOL   LCAPI lcPaint_PtbufAddArcSDE  (HANDLE hPtbuf, double Xs, double Ys, double DirAng, double Xe, double Ye, int Resol);
BOOL   LCAPI lcPaint_PtbufAddArcSDAR (HANDLE hPtbuf, double Xs, double Ys, double DirAng, double AngArc, double R, int Resol);
BOOL   LCAPI lcPaint_PtbufAddArcSER  (HANDLE hPtbuf, double Xs, double Ys, double Xe, double Ye, double Radius, BOOL bClockwise, int Resol);
BOOL   LCAPI lcPaint_PtbufAddArcSEL  (HANDLE hPtbuf, double Xs, double Ys, double Xe, double Ye, double ArcLen, BOOL bClockwise, int Resol);
BOOL   LCAPI lcPaint_PtbufAddArcSEA  (HANDLE hPtbuf, double Xs, double Ys, double Xe, double Ye, double AngArc, int Resol);
BOOL   LCAPI lcPaint_PtbufAddArcSEB  (HANDLE hPtbuf, double Xs, double Ys, double Xe, double Ye, double Bulge, int Resol);
BOOL   LCAPI lcPaint_PtbufAddArcCSE  (HANDLE hPtbuf, double Xc, double Yc, double Xs, double Ys, double Xe, double Ye, BOOL bClockwise, int Resol);
BOOL   LCAPI lcPaint_PtbufAddArcCSA  (HANDLE hPtbuf, double Xc, double Yc, double Xs, double Ys, double AngArc, int Resol);
BOOL   LCAPI lcPaint_PtbufAddArcCSL  (HANDLE hPtbuf, double Xc, double Yc, double Xs, double Ys, double ChordLen, BOOL bClockwise, int Resol);
BOOL   LCAPI lcPaint_PtbufAddArcCRAA (HANDLE hPtbuf, double Xc, double Yc, double R, double AngStart, double AngEnd, BOOL bClockwise, int Resol);
BOOL   LCAPI lcPaint_PtbufAddEllipse (HANDLE hPtbuf, double Xc, double Yc, double Rmaj, double Rmin, double RotAng, double StartAng, double ArcAng, int Resol);
BOOL   LCAPI lcPaint_PtbufAddEllipse2(HANDLE hPtbuf, double X1, double Y1, double X2, double Y2, int Resol);
BOOL   LCAPI lcPaint_PtbufAddRect    (HANDLE hPtbuf, double Xc, double Yc, double W, double H, double Angle, double R, int Resol);
BOOL   LCAPI lcPaint_PtbufAddRect2   (HANDLE hPtbuf, double X1, double Y1, double X2, double Y2, double R, int Resol);
BOOL   LCAPI lcPaint_PtbufAddRect3   (HANDLE hPtbuf, double X1, double Y1, double X2, double Y2, double W, int Align, double R, int Resol);
BOOL   LCAPI lcPaint_PtbufAddWline   (HANDLE hPtbuf, double X1, double Y1, double X2, double Y2, double W, int Align, BOOL bArc, int Resol);
BOOL   LCAPI lcPaint_PtbufAddPtbuf   (HANDLE hPtbuf, HANDLE hPtbuf2);
BOOL   LCAPI lcPaint_PtbufGetPoint   (HANDLE hPtbuf, int Mode, double* pX, double* pY);
BOOL   LCAPI lcPaint_PtbufGetPoint2  (HANDLE hPtbuf, int Mode, double* pX, double* pY, double* pPrm1, double* pPrm2, int* pIntPrm);
BOOL   LCAPI lcPaint_PtbufInterpolate(HANDLE hPtbuf, BOOL bClosed, HANDLE hPtbufDest, int Mode, int Resol);
BOOL   LCAPI lcPaint_PtbufMove       (HANDLE hPtbuf, double dx, double dy);
BOOL   LCAPI lcPaint_PtbufRotate     (HANDLE hPtbuf, double Xc, double Yc, double Angle);
BOOL   LCAPI lcPaint_PtbufScale      (HANDLE hPtbuf, double Xc, double Yc, double ScaleX, double ScaleY);
BOOL   LCAPI lcPaint_PtbufMirror     (HANDLE hPtbuf, double X1, double Y1, double X2, double Y2);
BOOL   LCAPI lcPaint_PtbufCopy       (HANDLE hPtbuf, HANDLE hPtbufDest);
// Multipolygon 
HANDLE LCAPI lcPaint_CreateMpgon    ();
BOOL   LCAPI lcPaint_DeleteMpgon    (HANDLE hMpgon);
BOOL   LCAPI lcPaint_MpgonClear     (HANDLE hMpgon);
BOOL   LCAPI lcPaint_MpgonAddPgon   (HANDLE hMpgon, HANDLE hPtbuf);
BOOL   LCAPI lcPaint_MpgonAddText   (HANDLE hMpgon, HANDLE hFont, double X, double Y, LPCWSTR szText, int Resol);
BOOL   LCAPI lcPaint_MpgonAddBarcode(HANDLE hMpgon, int BarType, double Xc, double Yc, double Width, double Height, LPCWSTR szText);
BOOL   LCAPI lcPaint_MpgonMove      (HANDLE hMpgon, double dx, double dy);
BOOL   LCAPI lcPaint_MpgonRotate    (HANDLE hMpgon, double Xc, double Yc, double Angle);
BOOL   LCAPI lcPaint_MpgonScale     (HANDLE hMpgon, double Xc, double Yc, double ScaleX, double ScaleY);
BOOL   LCAPI lcPaint_MpgonMirror    (HANDLE hMpgon, double X1, double Y1, double X2, double Y2);
BOOL   LCAPI lcPaint_MpgonCopy      (HANDLE hMpgon, HANDLE hMpgonDest);
BOOL   LCAPI lcPaint_HatchGen (HANDLE hMpgon, HANDLE hHatch, double Dist, double Angle, double Gap);
// Image 
HANDLE LCAPI lcPaint_ImageAdd      (int Id);
BOOL   LCAPI lcPaint_ImageDelete   (HANDLE hImage);
      
HANDLE LCAPI lcPaint_ImageGetFirst ();
HANDLE LCAPI lcPaint_ImageGetNext  (HANDLE hImage);
HANDLE LCAPI lcPaint_ImageGetByID  (int Id);
BOOL   LCAPI lcPaint_ImageLoad     (HANDLE hImage, LPCWSTR szFileName);
BOOL   LCAPI lcPaint_ImageCopy     (HANDLE hImage, HANDLE hImageDest);
BOOL   LCAPI lcPaint_ImageCreate   (HANDLE hImage, int Width, int Height);
BOOL   LCAPI lcPaint_ImageSetPixel (HANDLE hImage, int X, int Y, int R, int G, int B);
BOOL   LCAPI lcPaint_ImageFlip     (HANDLE hImage, BOOL bHor, BOOL bVert);
BOOL   LCAPI lcPaint_ImageRotate   (HANDLE hImage, double Angle);
BOOL   LCAPI lcPaint_ImageGray     (HANDLE hImage);
BOOL   LCAPI lcPaint_ImageResize   (HANDLE hImage, int NewWidth, int NewHeight, int ResizeFilter);
HANDLE LCAPI lcPaint_ImageGetPtbuf (HANDLE hImage, double RotAngle);
HANDLE LCAPI lcPaint_FontOpenLC (LPCWSTR szFontName);
HANDLE LCAPI lcPaint_FontOpenTT (LPCWSTR szFontName, BOOL bBold, BOOL bItalic);
BOOL   LCAPI lcPaint_FontClose  (HANDLE hFont);
BOOL   LCAPI lcPaint_FontSelect (HANDLE hLcWnd, HANDLE hFont);