IWS_1st_No2DInsp/IWS/API/Litecad.pas

Function lcPaint_PtbufAddArc3p (hPtbuf: IntPtr; X1: Double; Y1: Double; X2: Double; Y2: Double; X3: Double; Y3: Double; Resol: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_PtbufAddArcSDE (hPtbuf: IntPtr; Xs: Double; Ys: Double; DirAng: Double; Xe: Double; Ye: Double; Resol: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_PtbufAddArcSDAR (hPtbuf: IntPtr; Xs: Double; Ys: Double; DirAng: Double; AngArc: Double; R: Double; Resol: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_PtbufAddArcSER (hPtbuf: IntPtr; Xs: Double; Ys: Double; Xe: Double; Ye: Double; Radius: Double; bClockwise: Integer; Resol: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_PtbufAddArcSEL (hPtbuf: IntPtr; Xs: Double; Ys: Double; Xe: Double; Ye: Double; ArcLen: Double; bClockwise: Integer; Resol: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_PtbufAddArcSEA (hPtbuf: IntPtr; Xs: Double; Ys: Double; Xe: Double; Ye: Double; AngArc: Double; Resol: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_PtbufAddArcSEB (hPtbuf: IntPtr; Xs: Double; Ys: Double; Xe: Double; Ye: Double; Bulge: Double; Resol: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_PtbufAddArcCSE (hPtbuf: IntPtr; Xc: Double; Yc: Double; Xs: Double; Ys: Double; Xe: Double; Ye: Double; bClockwise: Integer; Resol: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_PtbufAddArcCSA (hPtbuf: IntPtr; Xc: Double; Yc: Double; Xs: Double; Ys: Double; AngArc: Double; Resol: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_PtbufAddArcCSL (hPtbuf: IntPtr; Xc: Double; Yc: Double; Xs: Double; Ys: Double; ChordLen: Double; bClockwise: Integer; Resol: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_PtbufAddArcCRAA (hPtbuf: IntPtr; Xc: Double; Yc: Double; R: Double; AngStart: Double; AngEnd: Double; bClockwise: Integer; Resol: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_PtbufAddEllipse (hPtbuf: IntPtr; Xc: Double; Yc: Double; Rmaj: Double; Rmin: Double; RotAng: Double; StartAng: Double; ArcAng: Double; Resol: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_PtbufAddEllipse2 (hPtbuf: IntPtr; X1: Double; Y1: Double; X2: Double; Y2: Double; Resol: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_PtbufAddRect (hPtbuf: IntPtr; Xc: Double; Yc: Double; W: Double; H: Double; Angle: Double; R: Double; Resol: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_PtbufAddRect2 (hPtbuf: IntPtr; X1: Double; Y1: Double; X2: Double; Y2: Double; R: Double; Resol: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_PtbufAddRect3 (hPtbuf: IntPtr; X1: Double; Y1: Double; X2: Double; Y2: Double; W: Double; Align: Integer; R: Double; Resol: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_PtbufAddWline (hPtbuf: IntPtr; X1: Double; Y1: Double; X2: Double; Y2: Double; W: Double; Align: Integer; bArc: Integer; Resol: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_PtbufAddPtbuf (hPtbuf: IntPtr; hPtbuf2: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_PtbufGetPoint (hPtbuf: IntPtr; Mode: Integer; pX: Pdouble; pY: Pdouble): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_PtbufGetPoint2 (hPtbuf: IntPtr; Mode: Integer; pX: Pdouble; pY: Pdouble; pPrm1: Pdouble; pPrm2: Pdouble; pIntPrm: Pinteger): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_PtbufInterpolate (hPtbuf: IntPtr; bClosed: Integer; hPtbufDest: IntPtr; Mode: Integer; Resol: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_PtbufMove (hPtbuf: IntPtr; dx: Double; dy: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_PtbufRotate (hPtbuf: IntPtr; Xc: Double; Yc: Double; Angle: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_PtbufScale (hPtbuf: IntPtr; Xc: Double; Yc: Double; ScaleX: Double; ScaleY: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_PtbufMirror (hPtbuf: IntPtr; X1: Double; Y1: Double; X2: Double; Y2: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_PtbufCopy (hPtbuf: IntPtr; hPtbufDest: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_CreateMpgon : IntPtr; stdcall; external 'Litecad64.dll';
Function lcPaint_DeleteMpgon (hMpgon: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_MpgonClear (hMpgon: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_MpgonAddPgon (hMpgon: IntPtr; hPtbuf: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_MpgonAddText (hMpgon: IntPtr; hFont: IntPtr; X: Double; Y: Double; szText: PWideChar; Resol: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_MpgonAddBarcode (hMpgon: IntPtr; BarType: Integer; Xc: Double; Yc: Double; Width: Double; Height: Double; szText: PWideChar): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_MpgonMove (hMpgon: IntPtr; dx: Double; dy: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_MpgonRotate (hMpgon: IntPtr; Xc: Double; Yc: Double; Angle: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_MpgonScale (hMpgon: IntPtr; Xc: Double; Yc: Double; ScaleX: Double; ScaleY: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_MpgonMirror (hMpgon: IntPtr; X1: Double; Y1: Double; X2: Double; Y2: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_MpgonCopy (hMpgon: IntPtr; hMpgonDest: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_HatchGen (hMpgon: IntPtr; hHatch: IntPtr; Dist: Double; Angle: Double; Gap: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_ImageAdd (Id: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcPaint_ImageDelete (hImage: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_ImageGetFirst : IntPtr; stdcall; external 'Litecad64.dll';
Function lcPaint_ImageGetNext (hImage: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcPaint_ImageGetByID (Id: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcPaint_ImageLoad (hImage: IntPtr; szFileName: PWideChar): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_ImageCopy (hImage: IntPtr; hImageDest: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_ImageCreate (hImage: IntPtr; Width: Integer; Height: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_ImageSetPixel (hImage: IntPtr; X: Integer; Y: Integer; R: Integer; G: Integer; B: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_ImageFlip (hImage: IntPtr; bHor: Integer; bVert: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_ImageRotate (hImage: IntPtr; Angle: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_ImageGray (hImage: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_ImageResize (hImage: IntPtr; NewWidth: Integer; NewHeight: Integer; ResizeFilter: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_ImageGetPtbuf (hImage: IntPtr; RotAngle: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcPaint_FontOpenLC (szFontName: PWideChar): IntPtr; stdcall; external 'Litecad64.dll';
Function lcPaint_FontOpenTT (szFontName: PWideChar; bBold: Integer; bItalic: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcPaint_FontClose (hFont: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_FontSelect (hLcWnd: IntPtr; hFont: IntPtr): Integer; stdcall; external 'Litecad64.dll';

implementation
end.
